test/parse/expr/bad-nop.txt
;;; ERROR: 1
(module (func 
          nop
          foo))
(;; STDERR ;;;
out/test/parse/expr/bad-nop.txt:4:11: error: unexpected token "foo"
          foo))
          ^^^
;;; STDERR ;;)
